# pv_worker

./: .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
app/: app_configuration.py  logging_configuration.py  main.py
app/gcp/: FirestoreService.py
app/mqtt/: mqtt_client.py
app/web/: app_router.py
scripts/: run_analysis.sh
tests/: dummy_test.py
